Fixed misalignment of add button in collection field when empty

--- a/platforms/common/scss/admin/_settings.scss
+++ b/platforms/common/scss/admin/_settings.scss
@@ -315,6 +315,10 @@
 // collections
 .collection-list .settings-param-field, .collection-keyvalue .settings-param-field .g-keyvalue-field {
     ul {
+        &:empty {
+            margin-top: -8px;
+        }
+
         @extend %list-reset;
         margin: 5px 0;
         border-spacing: 0 5px;
